<resources>
    <string name="app_name">GuardianNews</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_button_hint">Search articles here</string>
    <string name="action_settings">Settings</string>

    <string name="activity_sections">Sections Activity</string>

    <string name="no_author_info">No contributor info available for this article.</string>
    <string name="no_internet_connection">No internet connection...</string>
    <string name="try_again">Try Again</string>
    <string name="loading">Loading...</string>


    <string name="artanddesign" translatable="false">artanddesign</string>
    <string name="artanddesign_title">Art and design</string>

    <string name="business" translatable="false">business</string>
    <string name="business_title">Business</string>

    <string name="culture" translatable="false">culture</string>
    <string name="culture_title">Culture</string>

    <string name="education" translatable="false">education</string>
    <string name="education_title">Education</string>

    <string name="film" translatable="false">film</string>
    <string name="film_title">Film</string>

    <string name="world" translatable="false">world</string>
    <string name="world_title">World News</string>

    <string name="us_news" translatable="false">us-news</string>
    <string name="us_news_title">US News</string>

    <string name="section_title_default">News</string>


    <string name="emptylist_textview">No articles found related to search terms :(</string>
    

    <string name="settings_order_by_title">Organize Results By</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>

    <string name="settings_order_by_default" translatable="false">newest</string>

    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>



    


</resources>
